# closest-pair-of-points

./: CMakeLists.txt  ClosestPair.cpp  ClosestPair.h  Point.h  README.md  install_dependencies.sh  main.cpp  run_tests.sh  visualization_results.py
results/: results.csv
